deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-case-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-case-app
  template:
    metadata:
      labels:
        app: devops-case-app
    spec:
      containers:
      - name: app
        image: ghcr.io/bthngcr/devops-case-app:164787019b341c5d701a169860d0125631c9ca43
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /
            port : 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: devops-case-app
spec:
  selector:
    app: devops-case-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
