service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-case-app
spec:
  selector:
    app: devops-case-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
