ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-case-app-ingress
spec:
  rules:
  - host: "batuhan.helloworld.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-case-app
            port:
              number: 80
